@@ -1,0 +1,5 @@
+#! /usr/bin/dh-exec
+
+usr/lib/*/libglobus*.so.*
+usr/share/globus/gridftp-ssh
+usr/share/doc/libglobus-ftp-client-doc/GLOBUS_LICENSE => usr/share/doc/libglobus-ftp-client2/GLOBUS_LICENSE 
