@@ -1,3 +1,9 @@
+globus-ftp-client (8.36-1+gt6.@distro@) @distro@; urgency=low
+
+  * Replace deprecated perl POSIX::tmpnam with File::Temp::tmpnam
+
+ -- Globus Toolkit <support@globus.org>  Mon, 26 Jun 2017 16:02:33 -0400
+
 globus-ftp-client (8.35-1+gt6.@distro@) @distro@; urgency=low
 
   * Remove some redundent tests to reduce test time
